<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popularmovieapp.ui.DetailsMovieFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp16"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="200dp"
                android:layout_height="290dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <LinearLayout
                android:id="@+id/movie_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_toEndOf="@id/poster"
                android:layout_toRightOf="@id/poster"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_title"
                    android:textSize="@dimen/textSize_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp10"
                    android:textSize="@dimen/textSize_normal" />

                <TextView
                    android:id="@+id/release_date_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_release_date"
                    android:textSize="@dimen/textSize_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/release_date_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp10"
                    android:textSize="@dimen/textSize_normal" />

                <TextView
                    android:id="@+id/vote_average_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_vote_average"
                    android:textSize="@dimen/textSize_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vote_average_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp10"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/overview_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/poster"
                android:layout_marginTop="10dp"
                android:text="@string/header_overview"
                android:textSize="@dimen/textSize_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overview_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/overview_header"
                android:text="@string/not_available"
                android:textSize="@dimen/textSize_normal" />

            <ListView
                android:id="@+id/listview_trailers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/overview_content"/>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
